<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/backgroundColor"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin_8"
        android:layout_marginTop="@dimen/layout_margin_8"
        android:layout_marginEnd="@dimen/layout_margin_8"
        android:foreground="?android:attr/selectableItemBackground"
        android:stateListAnimator="@animator/touch"
        app:cardCornerRadius="@dimen/layout_margin_5"
        app:cardElevation="@dimen/layout_margin_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/newslist_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="vertical">

            <android.support.constraint.Group
                android:id="@+id/article_image_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:constraint_referenced_ids="scrim,thumbnail_image_card" />

            <ImageView
                android:id="@+id/thumbnail_image_card"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/image_desc_article_image"
                android:scaleType="centerCrop"
                app:layout_constraintDimensionRatio="h,16:9"
                app:layout_constraintEnd_toEndOf="@+id/newslist_constraint_layout"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/newslist_constraint_layout"
                app:layout_constraintTop_toTopOf="@+id/newslist_constraint_layout"
                app:srcCompat="@drawable/guardian_placeholder" />


            <ImageView
                android:id="@+id/scrim"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@null"
                android:scaleType="fitXY"
                android:src="@drawable/scrim"
                app:layout_constraintBottom_toBottomOf="@+id/thumbnail_image_card"
                app:layout_constraintEnd_toEndOf="@+id/thumbnail_image_card"
                app:layout_constraintStart_toStartOf="@+id/thumbnail_image_card"
                app:layout_constraintTop_toTopOf="@+id/thumbnail_image_card" />

            <TextView
                android:id="@+id/title_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/layout_margin_8"
                android:layout_marginRight="@dimen/layout_margin_8"
                android:ellipsize="end"
                android:gravity="bottom"
                android:letterSpacing="0.05"
                android:maxLines="3"
                android:paddingStart="@dimen/layout_margin_8"
                android:paddingTop="@dimen/layout_margin_8"
                android:paddingEnd="@dimen/layout_margin_8"
                android:paddingBottom="@dimen/layout_margin_8"
                android:text="@string/article_headline"
                android:textAppearance="@style/ArticleTitleText"
                app:layout_constraintBottom_toBottomOf="@+id/thumbnail_image_card"
                app:layout_constraintEnd_toEndOf="@+id/thumbnail_image_card"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/thumbnail_image_card" />


            <TextView
                android:id="@+id/trail_text_card"
                android:layout_width="0dp"
                android:layout_height="73dp"
                android:background="@color/backgroundColorOverlay"
                android:ellipsize="end"
                android:maxLines="3"
                android:minLines="3"
                android:paddingStart="@dimen/layout_margin_8"
                android:paddingTop="@dimen/layout_margin_8"
                android:paddingEnd="@dimen/layout_margin_8"
                android:paddingBottom="@dimen/layout_margin_8"
                android:text="@string/article_trail_text"
                android:textAppearance="@style/ArticleTrailText"
                app:layout_constraintEnd_toEndOf="@+id/thumbnail_image_card"
                app:layout_constraintStart_toStartOf="@+id/thumbnail_image_card"
                app:layout_constraintTop_toBottomOf="@+id/title_card" />

            <TextView
                android:id="@+id/author_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/backgroundColorOverlay"
                android:ellipsize="end"
                android:gravity="start"
                android:maxLines="1"
                android:paddingStart="@dimen/layout_margin_8"
                android:paddingEnd="@dimen/layout_margin_8"
                android:paddingBottom="@dimen/layout_margin_8"
                android:text="@string/article_author"
                android:textAppearance="@style/ArticleAuthorText"
                app:layout_constraintBottom_toBottomOf="@+id/newslist_constraint_layout"
                app:layout_constraintEnd_toStartOf="@+id/section_card"
                app:layout_constraintStart_toStartOf="@+id/newslist_constraint_layout"
                app:layout_constraintTop_toBottomOf="@+id/trail_text_card" />

            <TextView
                android:id="@+id/section_card"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:background="@color/backgroundColorOverlay"
                android:gravity="end"
                android:maxLines="1"
                android:paddingStart="@dimen/layout_margin_8"
                android:paddingEnd="@dimen/layout_margin_8"
                android:paddingBottom="@dimen/layout_margin_8"
                android:text="@string/article_section"
                android:textAppearance="@style/ArticleSectionText"
                app:layout_constraintBottom_toBottomOf="@+id/newslist_constraint_layout"
                app:layout_constraintEnd_toEndOf="@+id/newslist_constraint_layout"
                app:layout_constraintTop_toBottomOf="@+id/trail_text_card" />


            <TextView
                android:id="@+id/date_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@drawable/date_background_tint_alpha"
                android:gravity="center_horizontal"
                android:paddingStart="@dimen/layout_margin_8"
                android:paddingTop="@dimen/layout_margin"
                android:paddingEnd="@dimen/layout_margin_8"
                android:text="@string/article_date"
                android:textAppearance="@style/ArticleDateTimeText"
                app:layout_constraintEnd_toEndOf="@+id/newslist_constraint_layout"
                app:layout_constraintTop_toTopOf="@+id/newslist_constraint_layout" />

            <TextView
                android:id="@+id/Time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@drawable/date_background_tint_alpha"
                android:gravity="center_horizontal"
                android:paddingStart="@dimen/layout_margin_8"
                android:paddingEnd="@dimen/layout_margin_8"
                android:paddingBottom="@dimen/layout_margin_8"
                android:text="@string/article_time"
                android:textAppearance="@style/ArticleDateTimeText"
                app:layout_constraintEnd_toEndOf="@+id/date_card"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/date_card"
                app:layout_constraintTop_toBottomOf="@+id/date_card" />


            <ImageView
                android:id="@+id/bookmark_tail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@null"
                android:cropToPadding="false"
                android:paddingBottom="@dimen/margin_xl"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="@+id/date_card"
                app:layout_constraintStart_toStartOf="@+id/date_card"
                app:layout_constraintTop_toBottomOf="@+id/Time"
                app:srcCompat="@drawable/bookmark" />


        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
